# cbb

./: CMakeLists.txt  LICENSE  README.md
docs/: CBB試験仕様書.xlsx  CBB開発資料.xlsx  README.md
misc/cmake/modules/: FindFUSE.cmake  FindJubatusMPIO.cmake  FindJubatusMsgPackRPC.cmake  FindTBB.cmake
src/: CMakeLists.txt
src/cbb/: CMakeLists.txt  burst_buffer.cc  burst_buffer.h  burst_buffer_client.cc  burst_buffer_client.h  cbb.cc  local_file_exporter.cc  local_file_exporter.h  meta_data_manager.cc  meta_data_manager.h
src/cbfs/: CMakeLists.txt  cbb_client_wrapper.cc  cbb_client_wrapper.h  cbfs.cc
src/common/: common.h  error.h
src/test/: CMakeLists.txt  test_common.h  test_consistent_hash.cc  test_file_control.cc  test_hash_calc.cc  test_main.cc  test_mutex.cc  test_options.cc  test_select_server.cc  test_settings.cc
src/util/: CMakeLists.txt  file_control.cc  file_control.h  mutex.cc  mutex.h  mutex_file.cc  mutex_file.h  options.cc  options.h  select_server.cc  select_server.h  settings.cc  settings.h  thread.cc  thread.h
src/util/hash/: consistent_hash.h  hash_calc_base.h  hash_calc_md5.cc  hash_calc_md5.h  hash_calc_sha1.cc  hash_calc_sha1.h
tests/cases/: CMakeLists.txt  test2_run.sh  test_common.h  test_run.sh  test_setup.sh
tests/cases/multipleserver/: CMakeLists.txt  test2_0101.cc  test2_0102.cc  test2_0103.cc  test2_0104.cc  test2_0105.cc  test2_0106.cc  test2_0107.cc  test2_0108.cc  test2_0109.cc  test2_0110.cc  test2_0111.cc  test2_0112.cc  test2_0115.cc  test2_0118.cc  test2_0119.cc  test2_0120.cc  test2_0121.cc  test2_0122.cc  test2_0123.cc  test2_0125.cc  test2_0126.cc  test2_0128.cc  test2_0201.cc  test2_0202.cc  test2_0203.cc  test2_0204.cc  test2_0205.cc  test2_0206.cc  test2_0207.cc  test2_0208.cc  test2_0209.cc  test2_0210.cc  test2_0211.cc  test2_0212.cc  test2_0213.cc  test2_0214.cc  test2_0215.cc  test2_0216.cc  test2_0217.cc  (+1 more)
tests/cases/singleserver/: CMakeLists.txt  test_0101.cc  test_0102.cc  test_0103.cc  test_0104.cc  test_0105.cc  test_0106.cc  test_0107.cc  test_0108.cc  test_0109.cc  test_0110.cc  test_0111.cc  test_0112.cc  test_0115.cc  test_0119.cc  test_0120.cc  test_0121.cc  test_0122.cc  test_0123.cc  test_0125.cc  test_0126.cc  test_0128.cc  test_0201.cc  test_0202.cc  test_0203.cc  test_0204.cc  test_0205.cc  test_0206.cc  test_0207.cc  test_0208.cc  test_0209.cc  test_0210.cc  test_0211.cc  test_0212.cc  test_0213.cc  test_0214.cc  test_0215.cc  test_0216.cc  test_0217.cc  test_0218.cc
work/: build.sh  cbb.conf
